styles.css
/* front page background image */
.sunsetBackground {
    background-image: url("Images/Sunset.jpg");
    width: 100%;
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* make sure all images are responsive */
img:responsive {
    width: 100%;
    height: auto;
}

/* adds mouseover effect to profile pic */
.mouseoverEffect {
    border: none;
    margin: 0 auto;
}

.mouseoverEffect:hover {
    -webkit-transform: scale(1.2);
    -moz-transform: scale(1.2);
    -o-transform: scale(1.2);
    transform: scale(1.2);
    transition: all 0.3s;
    -webkit-transition: all 0.3s;
}

/* Text settings for my name header */
.MyNameHeader {
    font-size: 5vw;
    font-weight: bold;
    font-family: 'Times New Roman', Times, serif;
    color: white;
}
.TitleHeader {
    font-size: 2vw;
    font-weight: bold;
    font-family: 'Times New Roman', Times, serif;
    color: white;
}

/* Text settings for name header on mobile*/
.MyNameHeaderMobile {
    font-size: 8vw;
    font-weight: bold;
    font-family: 'Times New Roman', Times, serif;
    color: white;
}
.TitleHeaderMobile {
    font-size: 4vw;
    font-weight: bold;
    font-family: 'Times New Roman', Times, serif;
    color: white;
}

/* set front page background picture to height of the screen */
.FrontPageHeight {
    height: 100vh;
}

